--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,15 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# Project-wide Gradle settings.
+# MIN_SDK_VERSION
+ANDROID_BUILD_MIN_SDK_VERSION=19
+# TARGET_SDK_VERSION
+ANDROID_BUILD_TARGET_SDK_VERSION=27
+# BUILD_SDK_VERSION
+ANDROID_BUILD_SDK_VERSION=27
+# BUILD_TOOLS_VERSION
+ANDROID_BUILD_TOOLS_VERSION=27.0.3
+# Ö§³Ö¿â°æ±¾
+SUPPORT_LIBRARY=27.1.1
