--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
     // LeanCloud 基础包
     implementation ('cn.leancloud.android:avoscloud-sdk:v4.6.4')
     implementation 'com.elvishew:xlog:1.4.0'
+
+    implementation 'com.facebook.stetho:stetho:1.5.0' //添加这两行
+    implementation 'com.uphyca:stetho_realm:2.2.2'
 }
