--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
 
     implementation 'com.facebook.stetho:stetho:1.5.0' //添加这两行
     implementation 'com.uphyca:stetho_realm:2.2.2'
+
+    implementation 'com.alibaba:fastjson:1.2.37.android'
 }
