--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath "io.realm:realm-gradle-plugin:5.3.0"
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +19,6 @@ allprojects {
         google()
         jcenter()
         maven { url "http://mvn.leancloud.cn/nexus/content/repositories/public" }
-        maven { url 'https://github.com/WickeDev/stetho-realm/raw/master/maven-repo' }
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
     }
