--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'realm-android'
+apply plugin: 'org.greenrobot.greendao' // apply plugin
+
 android {
     compileSdkVersion project.ANDROID_BUILD_SDK_VERSION as int
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
@@ -35,6 +36,11 @@ android {
         abortOnError false
     }
 
+    greendao {
+        schemaVersion 1
+        daoPackage 'com.wangsz.greendao.gen'
+        targetGenDir 'src/main/java'
+    }
 }
 
 dependencies {
@@ -62,8 +68,9 @@ dependencies {
     implementation ('cn.leancloud.android:avoscloud-sdk:v4.6.4')
     implementation 'com.elvishew:xlog:1.4.0'
 
-    implementation 'com.facebook.stetho:stetho:1.5.0' //添加这两行
-    implementation 'com.uphyca:stetho_realm:2.2.2'
+    implementation 'org.greenrobot:greendao:3.2.2' // add library
+    implementation 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.0.3'
 
     implementation 'com.alibaba:fastjson:1.2.37.android'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
