--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
     }
 
     //为了解决部分第三方库重复打包了META-INF的问题
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
@@ -65,7 +65,7 @@ dependencies {
     })
     implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
     // LeanCloud 基础包
-    implementation ('cn.leancloud.android:avoscloud-sdk:v4.6.4')
+    implementation('cn.leancloud.android:avoscloud-sdk:v4.6.4')
     implementation 'com.elvishew:xlog:1.4.0'
 
     implementation 'org.greenrobot:greendao:3.2.2' // add library
@@ -73,4 +73,8 @@ dependencies {
 
     implementation 'com.alibaba:fastjson:1.2.37.android'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //leakcanary内存泄漏检测
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 }
